--- a/public/config.json
+++ b/public/config.json
@@ -1,79 +1,73 @@
 {
     "workflowApiVersion": "1.1",
     "metaData": {
-        "icon": "images/icon.png",
-        "iconSmall": "images/iconSmall.png",
-        "category": "message"
+       "icon": "images/sms.png",
+       "iconSmall": "images/smsSmall.png",
+       "category": "message"
     },
     "type": "REST",
     "lang": {
-        "en-US": {
-            "name": "Template",
-          "description": "A Template for a custom Journey Builder activity",
-          "step1Label": "Configure Activity"
-        }
+       "en-US": {
+           "name": "REST Activity (Workflow API v1.1)",
+           "description": "An example REST activity using workflow API v1.1 format."
+       }
     },
     "arguments": {
         "execute": {
-           "inArguments":[{
+            "inArguments": [
+                {
                     "emailAddress": "{{InteractionDefaults.Email}}"
                 },
                 {
                     "phoneNumber": "{{Contact.Default.PhoneNumber}}"
-                }],
-          "outArguments": [{
+                }
+            ],
+            "outArguments": [
+                {
                     "foundSignupDate": ""
-                }],
-          "url": "https://jb-gcorreia.herokuapp.com/journeybuilder/execute"
+                }
+            ],
+            "url": "https://jb-gcorreia.herokuapp.com/execute"
         }
     },
     "configurationArguments": {
-      "applicationExtensionKey": "44812e07-bfd9-4d3b-87da-b62c47a055ba",
-      "save": {
-        "url": "https://jb-gcorreia.herokuapp.com/journeybuilder/save",
-          "verb": "POST",
-        "useJwt": true
+       "applicationExtensionKey": "44812e07-bfd9-4d3b-87da-b62c47a055ba",
+       "save": {
+           "url": "https://jb-gcorreia.herokuapp.com/save"
        },
        "publish": {
-        "url": "https://jb-gcorreia.herokuapp.com/journeybuilder/publish",
-           "verb": "POST",
-        "useJwt": true
+           "url": "https://jb-gcorreia.herokuapp.com/publish"
        },
-      "stop": {
-        "url": "https://jb-gcorreia.herokuapp.com/journeybuilder/stop",
-           "verb": "POST",
-        "useJwt": true
-      },
-      "validate": {
-        "url": "https://jb-gcorreia.herokuapp.com/journeybuilder/validate",
-        "verb": "POST",
-        "useJwt": true
-      }
+       "validate": {
+           "url": "https://jb-gcorreia.herokuapp.com/validate"
+       },
+       "stop": {
+           "url": "https://jb-gcorreia.herokuapp.com/stop"
+       }
     },
     "wizardSteps": [
-         { "label": "Step 1", "key": "step1" },
+       { "label": "Step 1", "key": "step1" },
        { "label": "Step 2", "key": "step2" },
        { "label": "Step 3", "key": "step3" },
        { "label": "Step 4", "key": "step4", "active": false }
     ],
     "userInterfaces": {
-        "configModal": {
-            "height": 200,
-            "width": 300,
-          "fullscreen": true
-        }
+       "configModal": {
+           "height": 200,
+           "width": 300,
+           "fullscreen": true
+       }
     },
     "schema": {
         "arguments": {
             "execute": {
-                "inArguments": [ 
-			{
-                        	"phoneNumber": 
-					{
-                            			"dataType": "Phone",
-                            			"isNullable": false,
-                            			"direction": "in"   
-                        		}
+                "inArguments": [
+                    {
+                        "phoneNumber": {
+                            "dataType": "Phone",
+                            "isNullable": false,
+                            "direction": "in"   
+                        }
                     },
                     {
                         "emailAddress": {
@@ -82,14 +76,16 @@
                             "direction": "in"
                         }
                     }
-		],
-                "outArguments": [ {
+                ],
+                "outArguments": [
+                    {
                         "foundSignupDate": {
                             "dataType": "Date",
                             "direction": "out",
                             "access": "visible"
                         }
-                    }]
+                    }
+                ]
             }
         }
     }
